--- a/index.html
+++ b/index.html
@@ -140,6 +140,78 @@
                     <h5>$9.200,00</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>ES Special Swap PRS</h2>
+                    <h3>PRS</h3>
+                    <h4>ES Swap PRS</h4>
+                    <p>La PRS Special Swap ofrece versatilidad y sofisticación en un solo instrumento. Con cuerpo semi-hollow, combina claridad y resonancia natural. Equipada con humbuckers y una single-coil central, brinda una paleta tonal única para estilos modernos y clásicos. Su acabado refinado y construcción impecable la hacen destacar en escenario y estudio.</p>
+                    <h5>$899,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>SE HOLLOWBODY STANDARD PIEZO</h2>
+                    <h3>PRS</h3>
+                    <h4>SE Hollowbody</h4>
+                    <p>La SE Hollowbody Standard Piezo combina calidez acústica y potencia eléctrica en un solo instrumento. Su cuerpo completamente hueco ofrece resonancia rica y natural, mientras el sistema piezo integrado permite sonidos acústicos realistas. Con pastillas humbucker y versatilidad tonal, es perfecta para músicos que buscan elegancia, dinamismo y expresión.</p>
+                    <h5>$999,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>S2 VELA SATIN</h2>
+                    <h3>PRS</h3>
+                    <h4>S2</h4>
+                    <p>La S2 Vela Satin combina un estilo retro con la modernidad de PRS. Su cuerpo ligero y acabado satinado realzan la resonancia natural. Equipada con una pastilla Starla humbucker y una single-coil Type-D, ofrece tonos versátiles, desde limpios brillantes hasta crujidos clásicos. Una guitarra cómoda, elegante y con gran carácter.</p>
+                    <h5>$1.299,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Stories Collection Mike Campbell Red Dog Telecaster®</h2>
+                    <h3>Fender</h3>
+                    <h4>Telecaster signature</h4>
+                    <p>Inspirada en la legendaria guitarra de Mike Campbell, esta Telecaster® combina historia y carácter. Con acabado Road Worn® Red over Blue, mástil en C y pastillas estilo vintage, ofrece tonos brillantes y definidos. Es un tributo a la autenticidad del rock, diseñada para músicos que valoran alma y legado.</p>
+                    <h5>$4.200,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Stevie Ray Vaughan Stratocaster®</h2>
+                    <h3>Fender</h3>
+                    <h4>Stratocaster signature</h4>
+                    <p>Un tributo al icónico sonido de SRV, esta Stratocaster® destaca por su golpeador dorado, puente invertido y mástil ovalado en forma de “C”. Equipada con pastillas Texas Special™, ofrece un tono potente y lleno de blues. Es la herramienta perfecta para guitarristas que buscan expresividad, garra y autenticidad.</p>
+                    <h5>$5.760,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Jack White Triplecaster™ Telecaster®</h2>
+                    <h3>Fender</h3>
+                    <h4>Telecaster signature</h4>
+                    <p>Sé que Fender lanzó en ediciones limitadas la Custom Shop Triple Strat/Tele, conocidas como Triplecaster, con tres humbuckers o configuraciones especiales. Pero también hay luthiers y ediciones boutique con ese nombre.</p>
+                    <h5>$10.599,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Gibson Mod™ Collection 1958 Explorer Reissue, Plum Chameleon</h2>
+                    <h3>Gibson</h3>
+                    <h4>Explorer</h4>
+                    <p>Un clásico futurista reinventado. Está Explorer Reissue de 1958 luce un exclusivo acabado Plum Chameleon que cambia con la luz. Con cuerpo de caoba, mástil sólido y potentes humbuckers Burstbucker, ofrece sustain, pegada y un tono inconfundible. Una pieza única que mezcla tradición, innovación y personalidad arrolladora.</p>
+                    <h5>$3.777,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Gibson Certified Vintage 1960 Gibson ES-355TDSV, Cherry</h2>
+                    <h3>Gibson</h3>
+                    <h4>ES-355</h4>
+                    <p>Una joya histórica de Gibson, esta ES-355TDSV de 1960 en acabado Cherry combina elegancia y sonido legendario. Con cuerpo semihueco, electrónica Varitone y vibrato Maestro, ofrece tonos cálidos, expresivos y versátiles. Certificada como pieza vintage auténtica, es un ícono buscado por coleccionistas y músicos que valoran herencia y sofisticación.</p>
+                    <h5>$34.555,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
             </section>
         </section>
     </main>
