--- a/index.html
+++ b/index.html
@@ -212,6 +212,33 @@
                     <h5>$34.555,00</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Gibson Les Paul Standard 60s Plain Top, Tobacco Burst, Exclusive</h2>
+                    <h3>Gibson</h3>
+                    <h4>Les Paul</h4>
+                    <p>Esta exclusiva Les Paul Standard 60s Plain Top combina la elegancia del acabado Tobacco Burst con un estilo sobrio y clásico. Su mástil Slimtaper ofrece comodidad moderna, mientras los humbuckers Burstbucker entregan calidez, sustain y pegada. Un modelo auténtico que celebra el legado sesentero con carácter exclusivo.</p>
+                    <h5>$6.500,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>American Ultra II Stratocaster® Left-Hand</h2>
+                    <h3>Fender</h3>
+                    <h4>Stratocaster</h4>
+                    <p>Diseñada para guitarristas zurdos que buscan lo último en innovación y comodidad. Con mástil moderno “Modern D”, trastes Ultra, pastillas V-Mod II y sistema de tremolo de última generación, ofrece versatilidad tonal, claridad y sustain. Ideal para escenarios exigentes, estudio y músicos que valoran precisión y rendimiento superior.</p>
+                    <h5>$877,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Classic Vibe '60s Competition Mustang®</h2>
+                    <h3>Fender</h3>
+                    <h4>Mustang</h4>
+                    <p>Inspirada en el espíritu de los 60, esta Mustang® ofrece estilo y rendimiento clásico. Con cuerpo compacto, pastillas single-coil de época y mástil en “C” cómodo, entrega tonos brillantes y dinámicos. Su acabado Competition añade carácter visual retro, mientras su versatilidad la hace ideal para rock, indie y blues modernos.</p>
+                    <h5>$855,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
             </section>
         </section>
     </main>
