ultima guitarra home

--- a/index.html
+++ b/index.html
@@ -239,6 +239,15 @@
                     <h5>$855,00</h5>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Player II Modified Telecaster®</h2>
+                    <h3>Fender</h3>
+                    <h4>Telecaster</h4>
+                    <p>La Player II Modified Telecaster® combina el clásico cuerpo Tele con mejoras modernas: pastillas humbucking y single-coil para tonos versátiles, mástil en “C” cómodo, diapasón de radio 12" y puente de seis selletas. Ideal para quienes buscan el sonido Fender tradicional con mayor flexibilidad y estilo contemporáneo.</p>
+                    <h5>$1.400,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
             </section>
         </section>
     </main>
