--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/ESSpecialSwapPRS.jpg.png" alt="Les paul junior Yellow tv"></a>
                     <h2>ES Special Swap PRS</h2>
                     <h3>PRS</h3>
                     <h4>ES Swap PRS</h4>
@@ -150,7 +150,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/SEHOLLOWBODYSTANDARDPIEZO.png" alt="Les paul junior Yellow tv"></a>
                     <h2>SE HOLLOWBODY STANDARD PIEZO</h2>
                     <h3>PRS</h3>
                     <h4>SE Hollowbody</h4>
@@ -159,7 +159,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/S2VELASATIN.png" alt="Les paul junior Yellow tv"></a>
                     <h2>S2 VELA SATIN</h2>
                     <h3>PRS</h3>
                     <h4>S2</h4>
@@ -168,7 +168,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/StoriesCollectionMikeCampbellRedDogTelecaster.png" alt="Les paul junior Yellow tv"></a>
                     <h2>Stories Collection Mike Campbell Red Dog Telecaster®</h2>
                     <h3>Fender</h3>
                     <h4>Telecaster signature</h4>
@@ -177,8 +177,8 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
-                    <h2>Stevie Ray Vaughan Stratocaster®</h2>
+                    <a href="./product.html"><img class="index" src="./img/StevieRayVaughanStratocaster.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Stevie Ray Vaughan Stratocaster</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster signature</h4>
                     <p>Un tributo al icónico sonido de SRV, esta Stratocaster® destaca por su golpeador dorado, puente invertido y mástil ovalado en forma de “C”. Equipada con pastillas Texas Special™, ofrece un tono potente y lleno de blues. Es la herramienta perfecta para guitarristas que buscan expresividad, garra y autenticidad.</p>
@@ -195,7 +195,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/GibsonMod™Collection1958ExplorerReissue,PlumChameleon.png" alt="Les paul junior Yellow tv"></a>
                     <h2>Gibson Mod™ Collection 1958 Explorer Reissue, Plum Chameleon</h2>
                     <h3>Gibson</h3>
                     <h4>Explorer</h4>
@@ -204,7 +204,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/GibsonCertifiedVintage1960GibsonES-355TDSV,Cherry.png" alt="Les paul junior Yellow tv"></a>
                     <h2>Gibson Certified Vintage 1960 Gibson ES-355TDSV, Cherry</h2>
                     <h3>Gibson</h3>
                     <h4>ES-355</h4>
@@ -213,7 +213,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/GibsonLesPaulStandard60sPlainTop,TobaccoBurst,Exclusive.png" alt="Les paul junior Yellow tv"></a>
                     <h2>Gibson Les Paul Standard 60s Plain Top, Tobacco Burst, Exclusive</h2>
                     <h3>Gibson</h3>
                     <h4>Les Paul</h4>
@@ -222,7 +222,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/AmericanUltraIIStratocaster®Left-Hand.png" alt="Les paul junior Yellow tv"></a>
                     <h2>American Ultra II Stratocaster® Left-Hand</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
@@ -231,8 +231,8 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
-                    <h2>Classic Vibe '60s Competition Mustang®</h2>
+                    <a href="./product.html"><img class="index" src="./img/ClassicVibe'70sCompetitionMustang®.png" alt="Les paul junior Yellow tv"></a>
+                    <h2>Classic Vibe '70s Competition Mustang®</h2>
                     <h3>Fender</h3>
                     <h4>Mustang</h4>
                     <p>Inspirada en el espíritu de los 60, esta Mustang® ofrece estilo y rendimiento clásico. Con cuerpo compacto, pastillas single-coil de época y mástil en “C” cómodo, entrega tonos brillantes y dinámicos. Su acabado Competition añade carácter visual retro, mientras su versatilidad la hace ideal para rock, indie y blues modernos.</p>
@@ -240,7 +240,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"><img class="index" src="./img/GibsonCustom1958LesPaulJuniorDoubleCut,HeavyAged,TVYellow.png" alt="Les paul junior Yellow tv"></a>
+                    <a href="./product.html"><img class="index" src="./img/PlayerIIModifiedTelecaster®.png" alt="Les paul junior Yellow tv"></a>
                     <h2>Player II Modified Telecaster®</h2>
                     <h3>Fender</h3>
                     <h4>Telecaster</h4>
