category option prs

--- a/category.html
+++ b/category.html
@@ -33,6 +33,7 @@
         <select name="Categorias" id="cat">
             <option value="fender">Fender</option>
             <option value="gibson">Gibson</option>
+            <option value="prs">PRS</option>
         </select>
         <section>
             <article>
@@ -46,7 +47,7 @@
             </article>
         </section>
     </main>
-    <footer class="footer">
+    <footer>
         <ul>
             <li>Agustín Oñate</li>
             <li>Marcos Bunge</li>
