--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <section class="art">
                 <article>
-                    <a href="./product.html"></a><img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage"></a>
+                    <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage"></a>
                     <h2>Stratocaster vintage 60s</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
@@ -78,7 +78,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"></a><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
+                    <a href="./product.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
                     <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
@@ -96,7 +96,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"></a><img class="index" src="./img/AmericanProfessionalIIStratocasterHSS.png" alt="Strarocaster HSS"></a>
+                    <a href="./product.html"><img class="index" src="./img/AmericanProfessionalIIStratocasterHSS.png" alt="Strarocaster HSS"></a>
                     <h2>American Professional II Stratocaster HSS</h2>
                     <h3>Fender</h3>
                     <h4>Stratocaster</h4>
@@ -105,7 +105,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"></a><img class="index" src="./img/FlyingVCustomFiguredTop-CobraBurst.png" alt="Flying V"></a>
+                    <a href="./product.html"><img class="index" src="./img/FlyingVCustomFiguredTop-CobraBurst.png" alt="Flying V"></a>
                     <h2>Flying V Custom Figured Top - Cobra Burst</h2>
                     <h3>Gibson</h3>
                     <h4>Flying V</h4>
@@ -114,7 +114,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"></a><img class="index" src="./img/LesPaulStandard50s,Exclusive-TransparentBlack..png" alt="Les Paul standard"></a>
+                    <a href="./product.html"><img class="index" src="./img/LesPaulStandard50s,Exclusive-TransparentBlack..png" alt="Les Paul standard"></a>
                     <h2>Les Paul Standard 50s, Exclusive - Transparent Black</h2>
                     <h3>Gibson</h3>
                     <h4>Les Paul</h4>
@@ -123,7 +123,7 @@
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
                 <article>
-                    <a href="./product.html"></a><img class="index" src="./img/SGStandardCustomColor-ClassicWhite.png.png" alt="SG standard"></a>
+                    <a href="./product.html"><img class="index" src="./img/SGStandardCustomColor-ClassicWhite.png.png" alt="SG standard"></a>
                     <h2>SG Standard Custom Color - Classic White</h2>
                     <h3>Gibson</h3>
                     <h4>SG</h4>
