--- a/searchresults.html
+++ b/searchresults.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <div>
+        <a href="./index.html">
+            <img src="./img/logo-gris.png" id="logo-register-login" alt="logo">
+        </a>
+    </div>
 </body>
 </html>
