footer e intente bajar

--- a/login.html
+++ b/login.html
@@ -28,6 +28,13 @@
             <button type="submit">Ingresar</button>
         </div>
         <a href="./register.html">No tengo cuenta</a>
-    </form> 
+    </form>
+    <footer>
+        <ul>
+            <li>Agustín Oñate</li>
+            <li>Marcos Bunge</li>
+            <li>Victor Biazzin Rubinho</li>
+        </ul>
+    </footer> 
 </body>
 </html>
