--- a/product.html
+++ b/product.html
@@ -48,7 +48,11 @@
         </section>
     </main>
     <footer>
-
+        <ul>
+            <li>Agustín Oñate</li>
+            <li>Marcos Bunge</li>
+            <li>Victor Biazzin Rubinho</li>
+        </ul>
     </footer>
 </body>
 </html>
