--- a/register.html
+++ b/register.html
@@ -38,5 +38,12 @@
             <a href="login.html">Ya tengo una cuenta</a>
         </div>
     </form>
+    <footer>
+        <ul>
+            <li>Agustín Oñate</li>
+            <li>Marcos Bunge</li>
+            <li>Victor Biazzin Rubinho</li>
+        </ul>
+    </footer>
 </body>
 </html>
