deje un poco mas fachero el aside

--- a/index.html
+++ b/index.html
@@ -30,26 +30,54 @@
     
     <main>
         <aside>
-            <div>
+            <form>
                 <h2>Categorias</h2>
-                <label for="cat">Marcas</label>
-                <select name="Categorias" id="cat">
-                    <option value="fender">Fender</option>
-                    <option value="gibson">Gibson</option>
-                    <option value="prs">PRS</option>
-                </select>
-            </div>
-            <div>
-                <label for="cat">Modelos</label>
-                <select name="Categorias" id="cat">
-                    <option value="Stratocaster">Stratocaster</option>
-                    <option value="Telecaster">Telecaster</option>
-                    <option value="ES-335">ES-335</option>
-                    <option value="SG">SG</option>
-                    <option value="SG">Flaying V</option>
-                    <option value="SG">Les Paul</option>
-                </select>
-            </div> 
+                <div class="aside">
+                    <label for="cat">Marcas</label>
+                    <select name="Categorias" id="cat">
+                        <option value="todo">-</option>
+                        <option value="fender">Fender</option>
+                        <option value="gibson">Gibson</option>
+                        <option value="prs">PRS</option>
+                    </select>
+                </div>
+                <div class="aside">
+                    <label for="cat">Modelos</label>
+                    <select name="Categorias" id="cat">
+                        <option value="todo">-</option>
+                        <option value="Stratocaster">Stratocaster</option>
+                        <option value="Telecaster">Telecaster</option>
+                        <option value="ES-335">ES-335</option>
+                        <option value="SG">SG</option>
+                        <option value="SG">Flaying V</option>
+                        <option value="SG">Les Paul</option>
+                    </select>
+                </div>
+                <div class="aside">
+                    <label for="color">Colores</label>
+                    <select name="colores" id="color">
+                        <option value="todo">-</option>
+                        <option value="rojo">Rojo</option>
+                        <option value="azul">Azul</option>
+                        <option value="negro">Negro</option>
+                        <option value="verde">verde</option>
+                        <option value="violeta">violeta</option>
+                        <option value="rosa">rosa</option>
+                        <option value="blanco">blanco</option>
+                        <option value="yelowtv">yelow tv</option>
+                        <option value="marron">marron</option>
+                    </select>
+                </div>
+                <div class="aside">
+                    <label for="mano">Zurdo/Diestro</label>
+                    <select name="manos" id="mano">
+                        <option value="todo">-</option>
+                        <option value="zurdo">Zurdo</option>
+                        <option value="diestro">Diestro</option>
+                    </select>
+                </div>
+                <button type="reset">Quitar</button>
+            </form>
         </aside>
         <section class="contenido">
             <div class="titulos">
