--- a/searchresults.html
+++ b/searchresults.html
@@ -10,10 +10,30 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <div>
-        <a href="./index.html">
-            <img src="./img/logo-gris.png" id="logo-register-login" alt="logo">
+    <header>
+        <a href="./index.html">    
+            <img id="logonombre" src="img/logonombre.png" alt="logonombre lenga">
         </a>
-    </div>
+        <form id="buscador" action="./searchresults.html" method="get">
+            <label for="search"></label>
+            <input id="search" type="text" name="busqueda" placeholder="Busqueda" value="">
+        </form>
+        <nav>
+            <ul class="paginas">
+                <li><a href="./index.html">HOME</a></li>
+                <li><a href="./category.html"></a>CATEGORIAS</li>
+                <li><a href="./login.html">LOGIN</a></li>
+                <li><a href="./register.html">REGISTRARSE</a> </li>
+            </ul>
+        </nav>
+    </header>
+
+    <footer>
+        <ul>
+            <li>Agustín Oñate</li>
+            <li>Marcos Bunge</li>
+            <li>Victor Biazzin Rubinho</li>
+        </ul>
+    </footer>
 </body>
 </html>
