--- a/searchresults.html
+++ b/searchresults.html
@@ -27,7 +27,36 @@
             </ul>
         </nav>
     </header>
-
+    <h2>Resultados de la busqueda:</h2>
+    <section class="art">
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage"></a>
+                    <h2>Stratocaster vintage 60s</h2>
+                    <h3>Fender</h3>
+                    <h4>Stratocaster</h4>
+                    <p>Inspirada en la década dorada del rock, esta Stratocaster captura el auténtico espíritu de los 60. Con pastillas de estilo vintage, mástil en C y tonos brillantes, ofrece un sonido versátil ideal para blues, surf y rock clásico. Su estética retro resalta con un acabado elegante y nostálgico.</p>
+                    <h5>$899,99</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/PlayerIIModified Telecaster®SH.png" alt="Telecaster Negra Violeta mod"></a>
+                    <h2>Player II Modified Telecaster® SH</h2>
+                    <h3>Fender</h3>
+                    <h4>Telecaster</h4>
+                    <p>La Player II Modified Telecaster® SH fusiona el diseño clásico Tele con mayor versatilidad. Con pastillas humbucker en el puente y single-coil en el mástil, ofrece desde limpios brillantes hasta sonidos potentes. Su mástil Modern “C”con 22 trastes y puente de seis selletas aseguran comodidad, afinación estable y un rango tonal ideal para diversos estilos.</p>
+                    <h5>$1.000,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+                <article>
+                    <a href="./product.html"><img class="index" src="./img/LimitedEditionAmericanProfessionalIIStratocaster®Thinline.png" alt="Telecaster Negra Violeta mod"></a>
+                    <h2>Limited Edition American Professional II Stratocaster® Thinline</h2>
+                    <h3>Fender</h3>
+                    <h4>Stratocaster</h4>
+                    <p>La Limited Edition American Professional II Stratocaster® Thinline combina el diseño icónico Strat con cuerpo semi-hueco para mayor resonancia. Sus pastillas V-Mod II ofrecen tonos claros y dinámicos, mientras el mástil Deep “C” y 22 trastes proporcionan comodidad y precisión. Ideal para guitarristas que buscan versatilidad, sustain mejorado y un sonido Strat clásico con carácter moderno.</p>
+                    <h5>$2.345,00</h5>
+                    <a id="vermas" href="product.html">Ver +</a>
+                </article>
+    <h3 class="resultados">No hay resultados</h3> 
     <footer>
         <ul>
             <li>Agustín Oñate</li>
