--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
     </header>
     <main>
         <section id="seccion-product" >
-            <h2>American Ultra Luxe Vintage '60s Stratocaster</h2>
+            <h2 class="modelo">American Ultra Luxe Vintage '60s Stratocaster</h2>
             <img id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
             <h3>Fender</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis rerum cumque sit molestiae aut neque!</p>
