product orden, agregar a modo de prototipo pasarela de compra

--- a/product.html
+++ b/product.html
@@ -27,14 +27,24 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="product">
         <section id="seccion-product" >
             <h2 class="modelo">American Ultra Luxe Vintage '60s Stratocaster</h2>
-            <img id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
-            <h3>Fender</h3>
+            <img clas="productimg" id="foto-product" src="./img/strato.sinfondo.png" alt="Stratocastor vintage 60s">
+            <article class="titulModelo">
+                <div class="titulModelo">
+                    <h3>Fender</h3>
+                    <h4>Stratocaster</h4>
+                </div>
+                <div class="titulModelo">
+                    <h5>$899.99</h5>
+                </div>
+                <div class="comprar">
+                    <a href="pasarelapagos.html">COMPRAR</a>
+                </div>
+            </article>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis rerum cumque sit molestiae aut neque!</p>
-            <h5>$899.99</h5>
-            <h4>Stratocaster</h4>
+            
             <p>10 unidades disponibles</p>
             <p>Lista de tags?</p>
         </section>
