--- a/product.html
+++ b/product.html
@@ -39,6 +39,10 @@
                 <div class="titulModelo">
                     <h5>$899.99</h5>
                 </div>
+                <div class="mapita">
+                    <h2>Veni a probarla</h2>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3286.1875900548607!2d-58.44627502319495!3d-34.54880545460198!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb436efe09303%3A0xfb39818e7624ac76!2sDigital%20House!5e0!3m2!1ses!2sar!4v1758315588162!5m2!1ses!2sar" width="250" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
                 <div class="comprar">
                     <a href="pasarelapagos.html">COMPRAR</a>
                 </div>
