--- a/product.html
+++ b/product.html
@@ -61,10 +61,7 @@
             </form>
             <div>
                 <input type="radio" name="raiting" id="raiting-1" value="">
-                <input type="radio" name="raiting" id="raiting-2" value="">
-                <input type="radio" name="raiting" id="raiting-3" value="">
-                <input type="radio" name="raiting" id="raiting-4" value="">
-                <input type="radio" name="raiting" id="raiting-5" value="">
+                <label for=""></label>
             </div>
         </section>
     </main>
