--- a/product.html
+++ b/product.html
@@ -61,7 +61,15 @@
             </form>
             <div>
                 <input type="radio" name="raiting" id="raiting-1" value="">
-                <label for=""></label>
+                <label for="raiting-1"></label>
+                <input type="radio" name="raiting" id="raiting-2" value="">
+                <label for="raiting-2"></label>
+                <input type="radio" name="raiting" id="raiting-3" value="">
+                <label for="raiting-3"></label>
+                <input type="radio" name="raiting" id="raiting-4" value="">
+                <label for="raiting-4"></label>
+                <input type="radio" name="raiting" id="raiting-5" value="">
+                <label for="raiting-5"></label>
             </div>
         </section>
     </main>
