--- a/searchresults.html
+++ b/searchresults.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    <h2>Resultados de la busqueda:</h2>
+    <h2 class="busqueda">Resultados de la busqueda:</h2>
     <section class="art">
                 <article>
                     <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage"></a>
