--- a/pasarelapagos.html
+++ b/pasarelapagos.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     <main>
-        <h1>Pasarela de pagos en proceso...</h1>
+        <h1 class="pasarela">Pasarela de pagos en proceso...</h1>
     </main>
     <footer>
         <ul>
