--- a/category.html
+++ b/category.html
@@ -21,7 +21,7 @@
         <nav>
             <ul class="paginas">
                 <li><a href="./index.html">HOME</a></li>
-                <li><a href="./category.html"></a>CATEGORIAS</li>
+                <li><a href="./category.html">CATEGORIAS</a></li>
                 <li><a href="./login.html">LOGIN</a></li>
                 <li><a href="./register.html">REGISTRARSE</a> </li>
             </ul>
