caterogias mas orden del home y algunas cosa mas

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         <aside>
             <form>
-                <h2>Categorias</h2>
+                <h2>CATTEGORIAS</h2>
                 <div class="aside">
                     <label for="cat">Marcas</label>
                     <select name="Categorias" id="cat">
@@ -85,7 +85,7 @@
                 <h3>Elegimos las guitarras mas exclusivas para entregarte.</h3>
                 <p>Lenga es un e-commerce de guitarras exclusivas en Buenos Aires, inspirado en la madera lenga de la Patagonia, reconocida por su nobleza y resonancia. Nuestro nombre refleja la esencia de lo que ofrecemos: instrumentos únicos, seleccionados por su calidad, diseño y carácter propio. En Lenga creemos que cada guitarra es más que un instrumento, es una extensión del músico y de su identidad. Por eso reunimos modelos especiales y ediciones limitadas, pensados para quienes valoran lo artesanal y lo auténtico. Más que una tienda, somos un espacio donde descubrir guitarras con personalidad y un sonido inconfundible.</p>
             </div>
-
+            <h2>TOP 9 PRODUCTOS</h2>
             <section class="art">
                 <article>
                     <a href="./product.html"><img class="index" src="./img/strato.sinfondo.png" alt="strato azul vintage"></a>
@@ -186,6 +186,7 @@
                     </div>
                     <a id="vermas" href="product.html">Ver +</a>
                 </article>
+                <h2>PRODUCTOS MÁS VENDIDOS</h2>
                 <article>
                     <a href="./product.html"><img class="index" src="./img/ESSpecialSwapPRS.jpg.png" alt="Les paul junior Yellow tv"></a>
                     <div class="home-product">
