un poco de todo

--- a/register.html
+++ b/register.html
@@ -29,7 +29,7 @@
             <input id="pass" type="password" name="contra" placeholder="Repetir contraseña" value="" required>
         </div>
         <div>
-            <button class="enviar-register" type="submit">Registrarme</button>
+            <button type="submit">Registrarme</button>
         </div>
         <div>
             <input type="checkbox" name="terminos" value="" required>Acepto términos y condiciones</button>
