--- a/category.html
+++ b/category.html
@@ -30,7 +30,7 @@
     <main>
 
         <aside>
-            <form>
+            <form action="./category.html" method="get">
                 <h2>CATTEGORIAS</h2>
                 <div class="aside">
                     <label for="cat">Marcas</label>
@@ -77,6 +77,7 @@
                     </select>
                 </div>
                 <button type="reset">Quitar</button>
+                <button type="submit">Buscar</button>
             </form>
         </aside>
         <section class="contenido">
