--- a/product.html
+++ b/product.html
@@ -59,17 +59,28 @@
                 <p>Fecha</p>
                 <p>Nombre del usuario</p>
             </form>
-            <div>
-                <input type="radio" name="raiting" id="raiting-1" value="">
-                <label for="raiting-1"></label>
-                <input type="radio" name="raiting" id="raiting-2" value="">
-                <label for="raiting-2"></label>
-                <input type="radio" name="raiting" id="raiting-3" value="">
-                <label for="raiting-3"></label>
-                <input type="radio" name="raiting" id="raiting-4" value="">
-                <label for="raiting-4"></label>
-                <input type="radio" name="raiting" id="raiting-5" value="">
-                <label for="raiting-5"></label>
+            <div class="rating">
+                <h3>Strato-Rating</h3>
+                <label>
+                    <input type="radio" name="rating" class="sistRating">
+                    <span class="stratoRating"></span>
+                </label>
+                <label>
+                    <input type="radio" name="rating" class="sistRating">
+                    <span class="stratoRating"></span>
+                </label>
+                <label>
+                    <input type="radio" name="rating" class="sistRating">
+                    <span class="stratoRating"></span>
+                </label>
+                <label>
+                    <input type="radio" name="rating" class="sistRating">
+                    <span class="stratoRating"></span>
+                </label>
+                <label>
+                    <input type="radio" name="rating" class="sistRating">
+                    <span class="stratoRating"></span>
+                </label>
             </div>
         </section>
     </main>
