--- a/product.html
+++ b/product.html
@@ -47,8 +47,7 @@
                     <a href="pasarelapagos.html">COMPRAR</a>
                 </div>
             </article>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis rerum cumque sit molestiae aut neque!</p>
-            
+            <p class="descripcion">Representing the pinnacle of innovation and craftsmanship, Fender American Ultra Luxe sets the benchmark for premium electric instruments. The new American Ultra Luxe Vintage series takes it a step further, showcasing the finest of Fender heritage – where timeless classics meet uncompromising modern refinement.</p>            
             <p>10 unidades disponibles</p>
             <p>Lista de tags?</p>
         </section>
@@ -57,7 +56,9 @@
                 <p>Rating</p>
                 <textarea name="review" id=""></textarea>
                 <p>Fecha</p>
+                <input type="date" value="">
                 <p>Nombre del usuario</p>
+                <input type="text" value="">
             </form>
             <div class="rating">
                 <h3>Strato-Rating</h3>
